# so101-collect-studio

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run.sh  tasks_desk_place_all.jsonl
collect_studio/: __init__.py  __main__.py  arms.py  avf_capture.py  cams.py  config_store.py  exporter.py  fk.py  library.py  paths.py  recorder.py  server.py
configs/: devices.yaml
configs/calibration_backup/robots/so_follower/: my_awesome_follower_arm.json
configs/calibration_backup/teleoperators/so_leader/: my_awesome_leader_arm.json
docs/: demo.html  lerobot-patches.md  三路相机无帧问题排查与修复.md  计划书.md
static/: index.html
tests/: test_camera_and_teleop.py  test_episode_manage.py  test_export_selection.py  test_task_sets.py  test_tasks_import.py
